--- a/index.html
+++ b/index.html
@@ -47,9 +47,6 @@
       <a class="link" href="https://github.com/Sidikajabar" target="_blank">
         <i class="fab fa-github">&nbsp;</i>Github
       </a>
-      <a class="link" href="https://www.linkedin.com/in/sidikajabar" target="_blank">
-        <i class="fab fa-linkedin">&nbsp;</i>Linkedin
-      </a>
       <a class="link" href="https://www.facebook.com/sidikajabar" target="_blank">
         <i class="fab fa-facebook">&nbsp;</i>Facebook
       </a>
@@ -59,7 +56,10 @@
       <a class="link" href="https://twitter.com/kelisaka" target="_blank">
         <i class="fab fa-twitter">&nbsp;</i>Twitter
       </a>
-      <a class="link" href="https://myanimelist.net/profile/sidikajabar" target="_blank">
+      <a class="link" href="https://www.youtube.com/channel/UCUYGmqkBlLTca8_lswL9Qzw" target="_blank">
+        <i class="fa fa-play-circle">&nbsp;</i>Youtube
+      </a>
+       <a class="link" href="https://myanimelist.net/profile/sidikajabar" target="_blank">
         <i class="fa fa-play-circle">&nbsp;</i>MyAnimeList
       </a>
     </div>
