--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <a class="link" href="https://twitter.com/kelisaka" target="_blank">
         <i class="fab fa-twitter">&nbsp;</i>Twitter
       </a>
-      <a class="link" href="https://www.youtube.com/channel/UCUYGmqkBlLTca8_lswL9Qzw" target="_blank">
+      <a class="link" href="https://www.youtube.com/c/sidikajabar" target="_blank">
         <i class="fa fa-play-circle">&nbsp;</i>Youtube
       </a>
        <a class="link" href="https://myanimelist.net/profile/sidikajabar" target="_blank">
