--- a/index.html
+++ b/index.html
@@ -44,20 +44,23 @@
     </div>
 
     <div id="links">
-      <a class="link" href="https://github.com/Sidikajabar" target="_blank">
-        <i class="fab fa-github">&nbsp;</i>Github
-      </a>
-      <a class="link" href="https://www.facebook.com/sidikajabar" target="_blank">
-        <i class="fab fa-facebook">&nbsp;</i>Facebook
+      <a class="link" href="https://www.youtube.com/c/sidikajabar" target="_blank">
+        <i class="fa fa-play-circle">&nbsp;</i>Youtube
       </a>
       <a class="link" href="https://www.instagram.com/sidikajabar" target="_blank">
         <i class="fab fa-instagram">&nbsp;</i>Instagram
       </a>
+      <a class="link" href="https://tiktok.com/sidikajabar" target="_blank">
+        <i class="fab fa-tiktok">&nbsp;</i>Tiktok
+      </a>
       <a class="link" href="https://twitter.com/kelisaka" target="_blank">
         <i class="fab fa-twitter">&nbsp;</i>Twitter
       </a>
-      <a class="link" href="https://www.youtube.com/c/sidikajabar" target="_blank">
-        <i class="fa fa-play-circle">&nbsp;</i>Youtube
+      <a class="link" href="https://www.facebook.com/sidikajabar" target="_blank">
+        <i class="fab fa-facebook">&nbsp;</i>Facebook
+      </a>
+       <a class="link" href="https://github.com/Sidikajabar" target="_blank">
+        <i class="fab fa-github">&nbsp;</i>Github
       </a>
        <a class="link" href="https://myanimelist.net/profile/sidikajabar" target="_blank">
         <i class="fa fa-play-circle">&nbsp;</i>MyAnimeList
