--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <i class="fab fa-instagram">&nbsp;</i>Instagram
       </a>
       <a class="link" href="https://tiktok.com/sidikajabar" target="_blank">
-        <i class="fab fa-tiktok">&nbsp;</i>Tiktok
+        <i class="fab fa-play-circle">&nbsp;</i>Tiktok
       </a>
       <a class="link" href="https://twitter.com/kelisaka" target="_blank">
         <i class="fab fa-twitter">&nbsp;</i>Twitter
