--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <a class="link" href="https://www.instagram.com/sidikajabar" target="_blank">
         <i class="fab fa-instagram">&nbsp;</i>Instagram
       </a>
-      <a class="link" href="https://tiktok.com/sidikajabar" target="_blank">
+      <a class="link" href="https://www.tiktok.com/@sidikajabar" target="_blank">
         <i class="fab fa-play-circle">&nbsp;</i>Tiktok
       </a>
       <a class="link" href="https://twitter.com/kelisaka" target="_blank">
